# FL_AV

./: .gitattributes  .gitignore  FlowerClient.py  FlowerClient_2.py  FlowerClient_temp copy.py  FlowerClient_temp.py  README.md  Server.py  how HEAD  load_data.py  main.py  main_fedml_object_detection.py  model_loading_test_success.ipynb  pyproject.toml  requirements.txt  run_client.sh  run_server.sh  test.ipynb  test_CPU.ipynb  test_GPU.ipynb  test_paths.yaml  trainer.py  util.py
my-project/: .gitignore  README.md  pyproject.toml
my-project/batch/batch_1/: data.yaml  test.txt  train.txt  val.txt
my-project/batch/batch_10/: data.yaml  test.txt  train.txt  val.txt
my-project/batch/batch_2/: data.yaml  test.txt  train.txt  val.txt
my-project/batch/batch_3/: data.yaml  test.txt  train.txt  val.txt
my-project/batch/batch_4/: data.yaml  test.txt  train.txt  val.txt
my-project/batch/batch_5/: data.yaml  test.txt  train.txt  val.txt
my-project/batch/batch_6/: data.yaml  test.txt  train.txt  val.txt
my-project/batch/batch_7/: data.yaml  test.txt  train.txt  val.txt
my-project/batch/batch_8/: data.yaml  test.txt  train.txt  val.txt
my-project/batch/batch_9/: data.yaml  test.txt  train.txt  val.txt
my-project/batch34/batch_1/: data.yaml  test.txt  train.txt
my-project/batch34/batch_10/: data.yaml  train.txt
my-project/batch34/batch_2/: test.txt
my-project/logs/: model_shape_test.ipynb
my-project/models/: yolo8n.yaml
my-project/my_project/: __init__.py  client_app.py  get_set_model.py  server_app copy.py  server_app.py  task.py
my-project/utils/: logging_setup.py
(+121054 files in other folders)
