
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-project"
version = "1.0.0"
description = "Federated Learning with YOLOv5 using Flower"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]==1.13.1",
    "flwr-datasets[vision]==0.3.0",
    "ultralytics==8.0.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "tqdm>=4.60.0"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flower"

[tool.flwr.app.components]
serverapp = "my_project.server_app:app"
clientapp = "my_project.client_app:app"

[tool.flwr.app.config]
num_server_rounds = 2
fraction_fit = 0.75
local_epochs = 1
min_clients = 3  # Ensures clarity on the required minimum clients

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 3
options.backend.client-resources.num-cpus = 2
options.backend.client-resources.num-gpus = 1
options.backend.init_args.num_cpus = 2
options.backend.init_args.num_gpus = 1
